2007-03-24  Inge Wallin  <ingwa@c83-252-238-97.bredband.comhem.se>

2007-03-24  Inge Wallin  <inge@lysator.liu.se>

	Qt3 -> Qt4 conversion.
	* dialogs/KCWizardCharttype.{h,cc} (KCWizardCharttype): Port from
	Q3ButtonGroup to QButtonGroup.

	* dialogs/KCConfigBackgroundPage.{h,cc}: remove all traces of
	class Q3ListBox.

2007-03-22  Inge Wallin  <inge@lysator.liu.se>

	More Qt3 -> Qt4 conversions.
	* kchart_part.cc (paintContent): Remove special code for double
	buffering since Qt4 does that by itself.

2007-03-21  Inge Wallin  <inge@lysator.liu.se>

	More Q3Support -> Qt4 conversions.
	* dialogs/KCWizardSubtypePage.cc (KCWizardSubtypePage):
	Q3ButtonGroup -> QGroupBox, some smaller cleanup

2007-03-18  Inge Wallin  <inge@lysator.liu.se>

	More Q3Support -> Qt4 conversions.
	* dialogs/KCConfigLegendPage.cc (KCConfigLegendPage): Fix layout
	and port to Qt4. This file produces no warnings now and uses no
	q3support classes.

	More Q3Support -> Qt4 conversions.
	* dialogs/KCConfigColorPage.cc (KCConfigColorPage): Fix layout and
	port to Qt4. This file produces no warnings now.

	More Q3Support -> Qt4 conversions.
	* dialogs/KCConfigAxesPage.cc (KCConfigAxesPage): Fix layout and
	port to Qt4. This file produces no warnings now and uses no
	q3support classes.

	More Q3Support -> Qt4 conversions.
	* dialogs/KCConfigSubtypeBarPage.cc (KCConfigSubtypeBarPage): Fix
	layout, and port to Qt4. This file produces no warnings now and
	uses no q3support classes.
	
	Do some more conversion Q3Support -> Qt4
	* dialogs/KCConfigBackgroundPage.cc (KCConfigBackgroundPage):
	Don't call deprecated constructor for parent.
	(KCConfigBackgroundPage): Convert from Q3GroupBox to QGroupBox and
	fix layout.
	* dialogs/KCConfigLegendPage.cc (KCConfigLegendPage): GridLayouts
	have coordinates, but VBoxLayouts don't.
	
	Remove some warnings for qgridlayout, and port to qgroupbox
	* dialogs/KCWizardCharttype.cc (constructor): Fix call to QGridLayout